--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<h1>{{ owner }}'s blog index</h1>
+{# templates/blog/index.html.twig #}
+{% extends 'base.html.twig' %}
 
-</body>
-</html>
+{% block title %}All articles{% endblock %}
+
+{% block body %}
+    <h1>All articles from article s table : </h1>
+    {% for article in articles %}
+        <div>
+            <h2>{{ dump (article.content) }} </h2>
+
+        </div>
+    {% else %}
+        Aucun article trouvé.
+    {% endfor %}
+    <a href="{{ path('app_index') }}">
+        Back to homepage.
+    </a>
+{% endblock %}
