--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,28 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Welcome in my awesome blog!{% endblock %}</title>
+        <link rel="stylesheet" href="/public/build/app.css">
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
     </head>
+
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+    <header>
+        {% include 'navbar.html.twig'%}
+    </header>
+
+        <div class="container">
+            {% block body %}
+            {% endblock %}
+        </div>
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
     </body>
+
+
 </html>
