--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -18,9 +18,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">MySQL</a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="{{ path ("add_category") }}">Ajout categorie</a>
             </li>
+
         </ul>
     </div>
 </nav>
